fixed form alignment - including mobile

--- a/less/pixtory.less
+++ b/less/pixtory.less
@@ -28,4 +28,8 @@ form {
     display: none;
   }
   
+  form {
+    margin: 0;
+  }
+  
 }
